# llm-robustness

./: README.md  pyproject.toml
src/llm_robustness/notebooks/: results_gemma9b.ipynb  results_gemma9b_rest.ipynb  results_gpt4o.ipynb  results_gpt4o_rest.ipynb  results_llama70b.ipynb  results_llama70b_rest.ipynb  results_mixtral.ipynb  results_mixtral_rest.ipynb
src/llm_robustness/scripts/: evaluate_answer_accuracy_model.py  main_gemma_gemma_rest.py  main_gemma_gpt4o_rest.py  main_gemma_model_rest.py  main_gpt4o_gpt4o_rest.py  main_gpt4o_model_rest.py  main_llama_gpt4o_rest.py  main_llama_llama_rest.py  main_llama_model_rest.py  main_mixtral_gpt4o_rest.py  main_mixtral_mixtral_rest.py  main_mixtral_model_rest.py
src/llm_robustness/utils/: data.py  generate.py  helper.py  prompt.py
