[project]
name = "llm-robustness"
description = "LLM robustness in the biomedical question answering"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scikit-learn~=1.5.2",
    "instructor~=1.4.3",
    "openai~=1.47.0",
    "groq~=0.11.0", 
    "loguru~=0.7.2",
    "python-dotenv~=1.0.1",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["llm_robustness"]
